# openenv-sre-agent

./: .gitignore  Dockerfile  README.md  app.py  arena.py  baseline.py  baseline_full.txt  baseline_output.txt  baseline_result.txt  deploy_final.py  deploy_final_out.txt  deploy_final_utf8.txt  deploy_out.txt  deploy_out_utf8.txt  deploy_raw.py  deploy_requests.py  deploy_to_hf.py  deploy_v2.py  deploy_v2_out.txt  deploy_v2_utf8.txt  docker_build2.txt  docker_build3.txt  docker_build_output.txt  docker_logs.txt  env.py  git_push_hf.py  git_status_output.txt  inference.py  inference_output.txt  models.py  openenv.yaml  pyproject.toml  react_agent.py  remote.txt  requirements.txt  run_baseline.py  run_baseline_urllib.py  tasks.py  test_smoke.py  upload_to_hf.py  (+3 more)
server/: app.py
