[project]
name = "cloud-sre-simulator"
version = "2.0.0"
description = "OpenEnv-compliant Cloud SRE & FinOps Simulator with ReAct AI Agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
